### Again a try (HEAD -> main)
>Thu, 27 Jun 2024 01:53:59 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Test create docker ftom github (origin/main, origin/HEAD)
>Thu, 27 Jun 2024 01:49:50 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Thu, 27 Jun 2024 01:41:40 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update to 1.1.0 (tag: v1.1.0)
>Thu, 27 Jun 2024 01:30:28 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Handle ows:ExceptionReport
>Thu, 27 Jun 2024 01:28:05 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Migrate to toml
>Thu, 27 Jun 2024 01:27:34 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update packages version Fix bug when a solar system object is unknown. This will improve performances
>Wed, 26 Jun 2024 19:40:13 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Regenerate GML files
>Mon, 17 Jun 2024 21:58:04 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update with recent version of IAU based on csvforwkt
>Mon, 17 Jun 2024 12:10:12 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)



