@@ -1,7 +1,7 @@
 include LICENSE
 include README.rst
 include pyproject.toml
-include requirements.txt
+include poetry.lock
 recursive-include data *
 recursive-include web *
 recursive-include templates *
