@@ -1,18 +1,0 @@
-aiofiles
-asyncpg
-fastapi
-httpx
-jinja2
-# TODO: in the future, we might move that in pyproject.toml as an optional "otel" dependency group (it requires moving complete dependency management system there, though)
-opentelemetry-distro
-opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-instrumentation-fastapi
-pydantic
-pydantic-xml[lxml]
-pydantic_settings
-python-dotenv==0.21.0
-setuptools-scm==7.0.5
-slack_sdk==3.27.2
-tortoise-orm
-types-setuptools==65.4.0.0
-uvicorn
