@@ -1,18 +1,0 @@
-black==20.8b1
-coverage==5.5
-flake8==3.9.2
-flit==3.2.0
-flit-core==3.2.0
-mccabe==0.6.1
-mypy==0.910
-mypy-extensions==0.4.3
-pip-licenses==3.4.0
-pre-commit==2.13.0
-pre-commit-hooks==4.0.1
-#pur==5.4.1
-pylint==3.0.0a1
-pytest==6.2.4
-Sphinx==4.0.2
-sphinx_rtd_theme
-tox==3.23.1
-xmltodict==0.13.0
