@@ -1,4 +1,0 @@
-jpype1==1.5.0
-lxml==5.2.2
-requests==2.31.0
-tqdm==4.66.4
